# Study

./: .gitignore  hello.py  main.py  pyproject.toml  requirements.txt
algorithm/: astar.py  backtrack.py  n_queens.py
config_files/: karabiner.json
data/: data.csv  data2.xlsx  ipo.py  ipo_data.csv  ipo_data.xls  secction1_1.py  section1_2.py  ticket.py
design_pattern/: abstract_factory.py  command.py  facade.py  factory.py  mvc1.py  mvc2.py  observer.py  proxy.py  simple_factory.py  singleton.py  state.py  state2.py  template.py
dl/: a.py  b.py
docker/: study.dockerfile
drawworld/: main.py  world.py
duan/: data.py  data.xlsx
geo/: geo.py
graph/: graph_traverse.py  line_profile.py
gym_test/: gym1.py
hands_on_machine_learning_with_sk_and_tensorflow/: first.py
json_test/: json-test.py
mnist/: mnist.py  mnist_tensorflow.py
net/: neural-net.py
neural_transfer/: neural_transfer.py
oop/: oop.py
package/: line_profile.py
package_test/: test_package.py
parser-test/: parser-test.py  猫眼 top100.csv
pyglet-test/: gif_test.py  pyglet-0326.py  pyglet-2-test.py  pyglet-test.py
pypdf_test/: bookmark.py  bookmark.txt  李航.txt
pytorch/: torch_gan.py  torch_rnn.py  torch_rnn_regression.py
recommend/: deepfm.ipynb
record_test/: record.py
rl_mofan/: RL_brain.py  ac_cartpole.py  main.py  qlearning_sarsa.py
rpc/: client.py  server.py
scrapy/: image_scrapy.py  newspaper_client.py  pic_scrapy.py
share_memory/: shared_memory.py
socket_test/: socket_client.py  socket_server.py
stackoverflow/: stackoverflow_client.py
tensorflow2/: tf1.py  time_series.py
test/: config.yaml  generate.py  path-test.py  test.py  test.yaml  thread_test.py  tushare-test.py  yaml_test.py
utils/: common_utils.py  decorator_utils.py  (+3 more)
(+454 files in other folders)
