[project]
name = "study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "decorator>=5.1.1",
    "drissionpage>=4.1.0.12",
    "fonttools>=4.55.0",
    "gevent==22.8.0",
    "greenlet<2",
    "jupyter>=1.1.1",
    "line-profiler>=4.1.3",
    "llvmlite>=0.43.0",
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "openai>=1.55.1",
    "pandas>=2.2.3",
    "pdfplumber>=0.11.4",
    "scikit-learn>=1.5.2",
    "webdriver-manager>=4.0.2",
    "zerorpc>=0.6.3",
]
