[project]
name = "study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "decorator>=5.1.1",
    "gym>=0.26.2",
    "line-profiler>=4.2.0",
    "numpy>=2.2.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pdfplumber>=0.11.4",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2024.2",
    "stable-baselines3>=2.3.2",
    "torch>=2.5.1",
]
