[project]
name = "study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "apscheduler>=3.11.0",
    "decorator>=5.1.1",
    "gym>=0.26.2",
    "line-profiler>=4.2.0",
    "nicegui>=2.22.1",
    "numpy>=2.2.1",
    "omegaconf>=2.3.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pdfplumber>=0.11.4",
    "pygetwindow>=0.0.9",
    "pyobjc-framework-quartz>=11.0",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2024.2",
    "reportlab>=4.4.5",
    "sktime>=0.39.0",
    "stable-baselines3>=2.3.2",
    "tqdm>=4.67.1",
]



[tool.ruff]
line-length = 120
indent-width = 4
